Fix style with whitespace

--- a/resources/css/pmd-tester.css
+++ b/resources/css/pmd-tester.css
@@ -164,6 +164,6 @@ span.stack-trace-method {
 }
 
 /* cmdline inside summary table */
-.table code {
+.table details code {
   white-space: normal;
 }
